Tried to fix data overlapping one another

--- a/git-prof-finder/src/components/pages/User/User.css
+++ b/git-prof-finder/src/components/pages/User/User.css
@@ -1,27 +1,27 @@
 .user-information {
     background: #333;
-    padding: 40px 30px;
-    border-radius: 10px;
-    height: 270px;
+    padding: 10px 40px;
+    border-radius: 20px;
+    height: 300px;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: row;
     color: #c4c4c4;
 }
 
 .user-information .image {
     width: 30%;
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 .user-information .image img {
     width: 200px;
-    border-radius: 10px;
+    border-radius: 20px;
     object-fit: cover;
 }
 
 .user-content {
-    padding: 10px;
+    padding: 20px;
 }
 
 .more-data {
@@ -30,7 +30,7 @@
 }
 
 .more-data p {
-    padding: 10px;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -43,7 +43,7 @@
 .back {
     background: #6cc644;
     color: #f5f5f5;
-    border-radius: 7px;
+    border-radius: 20px;
     padding: 10px;
     display: inline-block;
     margin: 10px 0;
@@ -51,13 +51,13 @@
 
 .user-repos {
     background-color: #f5f5f5;
-    padding: 20px 30px;
-    margin: 20px 0;
-    border-radius: 10px;
+    padding: 5px 20px;
+    margin: 10px 5px;
+    border-radius: 20px;
 }
 
 .repo {
-    padding: 20px;
+    padding: 10px;
     border-bottom: 1px solid #444;
 }
 
